--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,56 +1,43 @@
-site_name: Documentação Técnica - Sistema de Coinsurance BMG
-
+site_name: Template de Documentação
 theme:
   name: material
   language: pt-BR
-  features:
-    - navigation.sections
-    - navigation.expand
-    - content.code.copy
+
 nav:
   - Home: index.md
-
-  - Design e Arquitetura:
-      - Visão Geral do Sistema: arquitetura/visao-geral.md
-      - Desafios e Soluções: arquitetura/desafios-e-solucoes.md
-      - Design de Baixo Nível: arquitetura/low-level.md
-      - Modelo C4: arquitetura/modelo-c4.md
-
-  - Coinsurance / SUSEP (BMG):
-      - Visão geral: coinsurance/index.md
-
+  - Coinsurance:
+      - Visão geral do fluxo: coinsurance/index.md
       - Apólice:
           - Visão geral: coinsurance/apolice/index.md
+          - Fluxos:
+              - Emissão da Apólice (Master/Certificate): coinsurance/apolice/fluxos/emissao-apolice-master-certificate.md
           - PREMIT: coinsurance/apolice/premit.md
           - PREMREC: coinsurance/apolice/premrec.md
           - PREMRECEB: coinsurance/apolice/premreceb.md
           - RESPREM: coinsurance/apolice/resprem.md
-
           - De/Para:
-              - Sumário: coinsurance/apolice/depara/index.md
               - PREMIT: coinsurance/apolice/depara/premit.md
               - PREMREC: coinsurance/apolice/depara/premrec.md
               - PREMRECEB: coinsurance/apolice/depara/premreceb.md
               - RESPREM: coinsurance/apolice/depara/resprem.md
-
+              - Mapeamentos internos: coinsurance/apolice/depara/mapeamentos-internos.md
       - Sinistro:
           - Visão geral: coinsurance/sinistro/index.md
           - SINAV: coinsurance/sinistro/sinav.md
           - SINPEND: coinsurance/sinistro/sinpend.md
           - SINPAG: coinsurance/sinistro/sinpag.md
-
           - De/Para:
-              - Sumário: coinsurance/sinistro/depara/index.md
               - SINAV: coinsurance/sinistro/depara/sinav.md
               - SINPEND: coinsurance/sinistro/depara/sinpend.md
               - SINPAG: coinsurance/sinistro/depara/sinpag.md
-
-      - Retornos / RO BMG:
-          - Visão geral: coinsurance/retorno/index.md
-          - PREMRECEBC: coinsurance/retorno/premrecebc.md
-          - RESPREMC: coinsurance/retorno/respremc.md
-
-
+      - Retornos (RO BMG):
+          - Visão geral: coinsurance/retornos/index.md
+          - PREMAC: coinsurance/retornos/premac.md
+          - PREMRECAC: coinsurance/retornos/premrecac.md
+          - PREMRECEBC: coinsurance/retornos/premrecebc.md
+          - SINAVAC: coinsurance/retornos/sinavac.md
+          - SINPENDAC: coinsurance/retornos/sinpendac.md
+          - SINPAGAC: coinsurance/retornos/sinpagac.md
 plugins:
   - search
   - mermaid2
@@ -62,10 +49,8 @@ markdown_extensions:
   - codehilite:
       linenums: true
   - attr_list
-  - pymdownx.details
-  - pymdownx.tabbed:
-      alternate_style: true
   - pymdownx.superfences:
+        # make exceptions to highlighting of code:
       custom_fences:
         - name: mermaid
           class: mermaid
