--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: Coinsurance Docs
 theme:
   name: material
   language: pt-BR
-docs_dir: docs
+
 nav:
   - Home: index.md
   - Coinsurance:
@@ -31,7 +31,10 @@ nav:
               - SINPAG: coinsurance/sinistro/depara/sinpag.md
       - Retornos (ROs):
           - Visão geral: coinsurance/retornos/index.md
-          - PREMAC: coinsurance/retornos/premac.md
+          - PREMAC:
+              - Visão geral: coinsurance/retornos/premac/premac.md
+              - Especificação funcional: coinsurance/retornos/premac/premac-especificacao-funcional.md
+              - Especificação técnica: coinsurance/retornos/premac/premac-especificacao-tecnica.md
           - PREMRECAC: coinsurance/retornos/premrecac.md
           - PREMRECEBC: coinsurance/retornos/premrecebc.md
           - SINAVAC: coinsurance/retornos/sinavac.md
