--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: Coinsurance Docs
 theme:
   name: material
   language: pt-BR
-
+docs_dir: docs
 nav:
   - Home: index.md
   - Coinsurance:
